--- a/SimpleDBClient/SimpleDBClient.csproj
+++ b/SimpleDBClient/SimpleDBClient.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MSMQ.Messaging" Version="1.0.4" />
+  </ItemGroup>
+
 </Project>
